<resources>
    <string name="app_name">MeuMercado</string>
    <string name="app_name2">Meu Mercado</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-mail</string>
    <string name="access_your_account">Acesse sua conta</string>
    <string name="password">Senha</string>
    <string name="create_account">Criar nova conta.</string>
    <string name="name">Nome</string>
    <string name="access">Acessar</string>
    <string name="cep">CEP</string>
    <string name="address">Endereço</string>
    <string name="district">Bairro</string>
    <string name="city">Cidade</string>
    <string name="have_account">Já tenho conta</string>
    <string name="shopping_cart">Carrinho</string>
    <string name="home">Home</string>
    <string name="search">Pesquisar</string>
    <string name="receive_home">Receber em casa</string>
    <string name="pick_up_store">Retirar na loja</string>
    <string name="description_product_example">Há mais de 40 anos, o Café 3 Corações Tradicional leva a mesa dos consumidores, o prazer do sabor equilibrado, forte, com aroma intenso e que promove a cada amanhecer, experiências apaixonantes ao lado de quem mais amamos. Um clássico com qualidade de origem mineira, trazendo de suas raízes o gosto perfeito a cada xícara</string>
    <string name="add_to_cart">Adicionar ao carrinho</string>
    <string name="product">Produto</string>
    <string name="finish_order">Finalizar pedido</string>
    <string name="my_orders">Meus Pedidos</string>
    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu. Tente novamente mais tarde.</string>
    <string name="ERROR_LOAD_TASK">Erro ao carregar a tarefa.</string>
    <string name="ERROR_INTERNET_CONNECTION">Conexão à internet necessária para uso da applicação.</string>
</resources>